--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,16 +1,24 @@
 <ul class="nav nav-list">
-    <li><a href="{{ site.baseurl }}/">Home</a></li>
-    {% for section in site.sections %}
-        {% assign attr = section[0] %}
-        {% assign label = section[1] %}
-
-        {% for page in site.categories[attr] %}
-            {% if forloop.first %}
-                <li class=nav-header>{{ label }}</li>
-            {% endif %}
-            <li data-order="{{ page.order }}"><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></li>
-        {% endfor %}
+    {% assign sorted_pages = (site.pages | sort: 'title') %}
+    {% for p in sorted_pages %}
+    {% if p.dir == page.dir and p.url contains 'index.html' %}
+    <li class="nav-header"><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
+    {% endif %}
     {% endfor %}
-<!-- List additional links. It is recommended to add a divider
-    e.g. <li class=divider></li> first to break up the content. -->
+
+    {% for p in sorted_pages %}
+    {% if p.dir == page.dir and p.url contains 'index.html' %}{% else %}
+    {% if p.dir == page.dir %}
+      <li{% if p.url == page.url %} class="active"{% endif %}><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
+    {% endif %}
+    {% endif %}
+    {% endfor %}
+
+    <li class="divider"></li>
+
+    {% for p in sorted_pages %}
+    {% if p.dir contains page.dir and p.dir != page.dir and p.url contains 'index.html' %}
+    <li><a href="{{ site.baseurl }}{{ p.url }}">{{ p.title }}</a></li>
+    {% endif %}
+    {% endfor %}
 </ul>
