--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,7 +60,7 @@
                 <div id=content class=span10>
                     {% include search_results.html %}
 
-                    <h1>{{ page.title }}
+                    <h1 class="page-header">{{ page.title }}
                         {% if page.subtitle %}<small>{{ page.subtitle }}</small>{% endif %}
                     </h1>
 
