--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,11 @@
 body {
-    font-weight: 400;
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.7);
+    font-weight: 300;
+    font-size: 120%;
+    line-height: 1.5;
+}
+
+li {
+    line-height: 1.5 !important;
 }
 
 pre, code {
